@@ -1,7 +1,11 @@
 package ua.com.fielden.platform.reflection;
 
-import static java.lang.String.format;
-import static java.util.stream.Collectors.toList;
+import com.google.common.cache.Cache;
+import com.google.common.cache.CacheBuilder;
+import ua.com.fielden.platform.classloader.SecurityTokenClassLoader;
+import ua.com.fielden.platform.reflection.asm.impl.DynamicEntityClassLoader;
+import ua.com.fielden.platform.reflection.exceptions.ReflectionException;
+import ua.com.fielden.platform.utils.Pair;
 
 import java.io.File;
 import java.io.FileInputStream;
@@ -16,38 +20,37 @@ import java.util.function.Predicate;
 import java.util.jar.JarEntry;
 import java.util.jar.JarInputStream;
 
-import ua.com.fielden.platform.classloader.SecurityTokenClassLoader;
-import ua.com.fielden.platform.reflection.asm.impl.DynamicEntityClassLoader;
-import ua.com.fielden.platform.reflection.exceptions.ReflectionException;
-import ua.com.fielden.platform.utils.Pair;
+import static java.util.stream.Collectors.toList;
 
-/**
- * This is a helper class to retrieve classes for packages/jars etc.
- *
- * @author TG Team
- *
- */
+/// This is a helper class to retrieve classes for packages/jars etc.
+///
 public class ClassesRetriever {
-    private static final SecurityTokenClassLoader URL_CLASS_LOADER = new SecurityTokenClassLoader(ClassLoader.getSystemClassLoader());
 
-    /**
-     * Let's hide default constructor, which is not needed for a static class.
-     */
+    public static final String
+            ERR_GETTING_CLASSES_ON_PATH = "Could not get classes on path [%s] in package [%s].",
+            ERR_LOADING_CLASS = "Failed to load class [%s].";
+
+    private static final SecurityTokenClassLoader URL_CLASS_LOADER = new SecurityTokenClassLoader(ClassLoader.getSystemClassLoader());
+    private static final Cache<String, Class<?>> ADHOC_CLASSES = CacheBuilder.newBuilder().weakValues().build();
+
+    /// Let's hide default constructor, which is not needed for a static class.
+    ///
     private ClassesRetriever() {
     }
 
-    /**
-     * Returns all classes in the specified package that is located on the path.
-     * The path might be a directory or *.jar archive according to condition specified by {@code typePredicate}.
-     *
-     * @param path
-     * @param packageName
-     * @param typePredicate – used to include only the types in the result, which satisfy the predicate.
-     * @return
-     * @throws IOException
-     * @throws ClassNotFoundException
-     * @throws Exception
-     */
+    /// Registers a class so that it can be found with [#findClass(String)].
+    /// This enables dynamically generated classes to be located by name (such classes often have an anonymous class loader,
+    /// which cannot be directly used to find them via [#loadClass(String)]).
+    ///
+    public static void registerClass(final Class<?> klass) {
+        ADHOC_CLASSES.put(klass.getCanonicalName(), klass);
+    }
+
+    /// Returns all classes in the specified package that is located on the path.
+    /// The path might be a directory or a `*.jar` archive according to conditions specified by `typePredicate`.
+    ///
+    /// @param typePredicate used to include only the types in the result, which satisfy the predicate.
+    ///
     public static List<Class<?>> getClassesInPackage(final String path, final String packageName, final Predicate<Class<?>> typePredicate) throws Exception {
         final SortedSet<Class<?>> classes = new TreeSet<>((o1, o2) -> o1.getName().compareTo(o2.getName()));
         final String packagePath = packageName.replace('.', '/');
@@ -63,120 +66,63 @@ public class ClassesRetriever {
         return new ArrayList<>(classes);
     }
 
-    /**
-     * Determines weather <code>derivedClass</code> is derived from <code>superClass</code>.
-     *
-     * @param derivedClass
-     * @param superClass
-     * @return
-     */
+    /// Determines weather `derivedClass` is derived from `superClass`.
+    ///
     public static boolean isClassDerivedFrom(final Class<?> derivedClass, final Class<?> superClass) {
-        return !derivedClass.equals(superClass) ? superClass.isAssignableFrom(derivedClass) : false;
+        return !derivedClass.equals(superClass) && superClass.isAssignableFrom(derivedClass);
     }
 
-    /**
-     * Searches for all classes defined in the provided package and located in the directory or archive specified with path.
-     *
-     * @param path
-     * @param packageName
-     * @return
-     * @throws Exception
-     */
+    /// Searches for all classes defined in the provided package and located in the directory or archive specified with path.
+    ///
     public static List<Class<?>> getAllClassesInPackage(final String path, final String packageName) throws Exception {
         return getClassesInPackage(path, packageName, null);
     }
 
-    /**
-     * returns all classes from the package that is located in the directory or archive specified with path and annotated with specified annotation
-     *
-     * @param path
-     * @param packageName
-     * @param annotation
-     * @return
-     * @throws Exception
-     */
+    /// Returns all classes from the package that is located in the directory or archive specified with path and annotated with specified annotation
+    ///
     public static List<Class<?>> getAllClassesInPackageAnnotatedWith(final String path, final String packageName, final Class<? extends Annotation> annotation) throws Exception {
         return getClassesInPackage(path, packageName, (testClass) -> AnnotationReflector.isAnnotationPresentForClass(annotation, testClass));
     }
 
-    /**
-     * Searches for all classes defined in the provided package from the directory or archive specified with path, which are derived from a specified superclass.
-     *
-     * @param path
-     * @param packageName
-     * @param superClass
-     * @return
-     * @throws Exception
-     */
+    /// Searches for all classes defined in the provided package from the directory or archive specified with path, which are derived from a specified superclass.
+    ///
     public static <T> List<Class<? extends T>> getAllClassesInPackageDerivedFrom(final String path, final String packageName, final Class<T> superClass) {
         try {
             return getClassesInPackage(path, packageName, (testClass) -> isClassDerivedFrom(testClass, superClass)).stream()
                     .map(type -> (Class<? extends T>) type).collect(toList());
         } catch (final Exception ex) {
-            throw new ReflectionException(format("Could not get classes on path [%s] in package [%s].", path, packageName), ex);
+            throw new ReflectionException(ERR_GETTING_CLASSES_ON_PATH.formatted(path, packageName), ex);
         }
     }
 
-    /**
-     * Searches for all non-abstract classes defined in the provided package from the directory or archive specified with path, which are derived from a specified superclass.
-     *
-     * @param path
-     * @param packageName
-     * @param superClass
-     * @return
-     * @throws Exception
-     */
+    /// Searches for all non-abstract classes defined in the provided package from the directory or archive specified with path, which are derived from a specified superclass.
+    ///
     public static <T> List<Class<? extends T>> getAllNonAbstractClassesInPackageDerivedFrom(final String path, final String packageName, final Class<T> superClass) throws Exception {
         return getClassesInPackage(path, packageName, testClass -> !Modifier.isAbstract(testClass.getModifiers()) && isClassDerivedFrom(testClass, superClass)).stream()
                 .map(type -> (Class<? extends T>) type).collect(toList());
     }
 
-    /**
-     * Returns classes in the package those are directly derived from the {@code superClass}
-     *
-     * @param path
-     * @param packageName
-     * @param superClass
-     * @return
-     * @throws Exception
-     */
+    /// Returns classes in the package those are directly derived from the `superClass`
+    ///
     public static List<Class<?>> getAllClassesInPackageDirectlyDerivedFrom(final String path, final String packageName, final Class<?> superClass) throws Exception {
         return getClassesInPackage(path, packageName, testClass -> !superClass.equals(testClass) ? superClass.equals(testClass.getSuperclass()) : false);
     }
 
-    /**
-     * Searches for all classes defined in the provided package, which have methods annotated with the specified annotation and located in the directory or archive specified with
-     * path.
-     *
-     * @param path
-     * @param packageName
-     * @param annotation
-     * @return
-     * @throws Exception
-     */
+    /// Searches for all classes defined in the provided package, which have methods annotated with the specified annotation and located in the directory or archive specified with
+    /// path.
+    ///
     public static List<Class<?>> getAllClassInPackageWithAnnotatedMethods(final String path, final String packageName, final Class<? extends Annotation> annotation) throws Exception {
         return getClassesInPackage(path, packageName, testClass -> AnnotationReflector.isClassHasMethodAnnotatedWith(testClass, annotation));
     }
 
-    /**
-     * Returns list of classes extended from the {@code superClass} and is not {@code abstract}
-     *
-     * @param path
-     * @param packageName
-     * @param superClass
-     * @return
-     * @throws Exception
-     */
+    /// Returns list of classes extended from the `superClass` and is not `abstract`
+    ///
     public static List<Class<?>> getAllNonAbstractClassesDerivedFrom(final String path, final String packageName, final Class<?> superClass) throws Exception {
         return getClassesInPackage(path, packageName, testClass -> isClassDerivedFrom(testClass, superClass) && !Modifier.isAbstract(testClass.getModifiers()) && !testClass.getName().contains("$"));
     }
 
-    /**
-     * Finds and loads class for with {@code className}.
-     *
-     * @param className
-     * @return
-     */
+    /// Finds and loads class for with `className`.
+    ///
     public static Class<?> findClass(final String className) {
         try {
             return DynamicEntityClassLoader.loadType(className);
@@ -184,26 +130,23 @@ public class ClassesRetriever {
             try {
                 return URL_CLASS_LOADER.loadClass(className);
             } catch (final ClassNotFoundException e) {
-                throw new ReflectionException(format("Failed to load class [%s]", className),e);
+                final Class<?> klass = ADHOC_CLASSES.getIfPresent(className);
+                if (klass != null) {
+                    return klass;
+                }
+                throw new ReflectionException(ERR_LOADING_CLASS.formatted(className), e);
             }
         }
     }
 
-    /**
-     * Returns all classes in the package and it's sub packages from the directory according to condition specified by {@code typePredicate}.
-     *
-     * @param directory
-     * @param packageName
-     * @param typePredicate
-     * @return
-     * @throws ClassNotFoundException
-     */
+    /// Returns all classes in the package and its sub-packages from the directory according to condition specified by `typePredicate`.
+    ///
     private static List<Class<?>> getFromDirectory(final File directory, final String packageName, final Predicate<Class<?>> typePredicate) throws ClassNotFoundException {
         final List<Class<?>> classes = new ArrayList<>();
         final List<Pair<File, String>> directories = new ArrayList<>();
         directories.add(new Pair<File, String>(directory, packageName));
         while (!directories.isEmpty()) {
-            final Pair<File, String> nextDirectory = directories.get(0);
+            final Pair<File, String> nextDirectory = directories.getFirst();
             if (nextDirectory.getKey().exists()) {
                 for (final File file : nextDirectory.getKey().listFiles()) {
                     if (file.getName().endsWith(".class")) {
@@ -222,26 +165,14 @@ public class ClassesRetriever {
         return classes;
     }
 
-    /**
-     * Utility method for checking string for existence of spaces. Value "%20" is needed to be checked for Windows paths.
-     *
-     * @param name
-     * @return
-     */
+    /// Utility method for checking string for existence of spaces. Value "%20" is needed to be checked for Windows paths.
+    ///
     private static boolean hasNoSpaces(final String name) {
         return name.indexOf(' ') < 0 && name.indexOf("%20") < 0;
     }
 
-    /**
-     * Returns all classes in the package and it's sub packages from the *.jar archive according to condition specified by {@code typePredicate}.
-     *
-     * @param jar
-     * @param packageName
-     * @param typePredicate
-     * @return
-     * @throws ClassNotFoundException
-     * @throws IOException
-     */
+    /// Returns all classes in the package and its sub-packages from the `*.jar` archive according to condition specified by `typePredicate`.
+    ///
     private static List<Class<?>> getFromJarFile(final String jar, final String packageName, final Predicate<Class<?>> typePredicate) throws ClassNotFoundException, IOException {
         final List<Class<?>> classes = new ArrayList<>();
         try (final JarInputStream jarFile = new JarInputStream(new FileInputStream(jar))) {
@@ -268,22 +199,14 @@ public class ClassesRetriever {
         return classes;
     }
 
-    /**
-     * removes the extension of the file
-     *
-     * @param className
-     * @return
-     */
+    /// Removes the extension of the file.
+    ///
     private static String stripFilenameExtension(final String className) {
         return className.substring(0, className.lastIndexOf('.'));
     }
     
-    /**
-     * Adds specified path to the class path. It works only if the system class loader is an instance of TgSystemClassLoader.
-     *
-     * @param path
-     * @throws Exception
-     */
+    /// Adds specified path to the class path.
+    ///
     private static void addPath(final String path) throws Exception {
         final File file = new File(path);
         URL_CLASS_LOADER.addURL(file.toURI().toURL());
